clusters/production/external-servers/pterodactyl/panel/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pterodactyl-panel-slice
  labels:
    kubernetes.io/service-name: pterodactyl-panel
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 80
endpoints:
  - addresses:
      - "192.168.4.171"
    conditions:
      ready: true
