clusters/production/external-servers/pterodactyl/panel/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pterodactyl-panel-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pterodactyl-panel.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: pterodactyl-panel
          port: 80
          scheme: http
